# CallbackFFT

./: .gitignore  .gitmodules  .runJob.sh  .submission.pbs  .submission.slurm  CMakeLists.txt  Makefile  README.md
include/: CuFFTFFT.hpp  CuMath.cuh  Define.h  FileTools.hpp  FillData.hpp  LoadTwiddleFactor.hpp  Radix.hpp  Radix2FFT.cuh  RadixKernel.cuh  Vector2File.h  axpy.cuh  axpy.hpp  findIndexOfMax.h  gpuErrorChk.h
partythird/cuda/: CMakeLists.txt
python_scripts/: FFTTimeComp.py  PlotFFT.py  runPlotFFT.sh
scripts/: CMakeLists.txt  Radix2Test.cpp  axpyTest.cpp
src/: Radix.cu  axpy.cu
